# 8-bit-ide

./: .gitignore  LICENSE  README.md
8-bit-ide-35/: 8-bit-ide-35-cache.lib  8-bit-ide-35.kicad_pcb  8-bit-ide-35.kicad_pcb-bak  8-bit-ide-35.sch  fp-info-cache  fp-lib-table  sym-lib-table
Firmware/: CMakeLists.txt  LICENSE  deployXta.bat
Firmware/Common/: CMakeLists.txt  DeviceId.cpp  DeviceId.h  IoConfig.cpp  IoConfig.h  IrqConfig.h  LbaTranslation.cpp  LbaTranslation.h  LedController.cpp  LedController.h  PeripheralController.cpp  PeripheralController.h  ResetController.h
Firmware/Common/Tests/: UnitTest.h
Firmware/Common/sha1/: sha1.h
Firmware/CommonTests/: CMakeLists.txt  DemoLedController.cpp  DemoPeripheralController.cpp  TestDeviceId.cpp  TestLbaTranslation.cpp  UnitDemo.h  UnitTest.cpp  UnitTest.h
Firmware/Dba8Firmware/: CMakeLists.txt  ControlRegisters.pio  DataBuffer.pio  Dba8Main.cpp
Firmware/LogicAnalyzer/: LaMain.cpp  LogicAnalyzer.cpp  LogicAnalyzer.h  LogicAnalyzer.pio
Firmware/XtaFirmware/: CMakeLists.txt  ControlRegisters.pio  DataBuffer.pio  Isa.pio  PollingLoop.S  XtBus.cpp  XtBus.h  XtBus.pio  XtBusAsm.S  XtBusDefs.h  XtaMain.cpp
HCT145Interposer/: HCT145Interposer-cache.lib  HCT145Interposer.kicad_pcb  HCT145Interposer.pro  HCT145Interposer.sch  fp-info-cache
HCT145Interposer/Gerbers/: HCT145Interposer-B_Cu.gbr  HCT145Interposer-B_Mask.gbr  HCT145Interposer-B_SilkS.gbr  HCT145Interposer-Edge_Cuts.gbr  HCT145Interposer-F_Cu.gbr  HCT145Interposer-F_Mask.gbr  HCT145Interposer-F_SilkS.gbr  HCT145Interposer.drl
Libraries/: Custom.dcm  Custom.lib  LICENSE
Libraries/Custom.pretty/: Reinforcing_Ring_Partial.kicad_mod  SD_Board.kicad_mod  SD_Board_SD_Socket_Down.kicad_mod  SW_DIP_SPSTx04.kicad_mod
PicoFirmware/: 8bit_ide_drive.cpp  CMakeLists.txt  deployLa.bat  isaout.pio
PicoFirmware/Common/: CMakeLists.txt  DeviceId.cpp  DeviceId.h
PicoFirmware/Common/fatfs/source/: ffconf.h
PicoFirmware/Common/tf_card/: tf_main.cpp
PicoFirmware/LogicAnalyzer/: CMakeLists.txt  DeviceId.cpp  DeviceId.h  LaMain.cpp  LogicAnalyzer.cpp  deploy.bat  logic_analyzer.cpp  logic_analyzer.h  logic_analyzer.pio  main.cpp
PicoFirmware/XtaFirmware/: CMakeLists.txt  control_registers.pio  data_buffer.pio  deploy.bat
PinRemapInterposer/: PinRemapInterposer-cache.lib  PinRemapInterposer.kicad_pcb  PinRemapInterposer.pro  PinRemapInterposer.sch  fp-info-cache
PinRemapInterposer/Gerbers/: PinRemapInterposer-B_Cu.gbr  PinRemapInterposer-B_Mask.gbr  PinRemapInterposer-B_SilkS.gbr  PinRemapInterposer-Edge_Cuts.gbr  PinRemapInterposer-F_Cu.gbr  PinRemapInterposer-F_Mask.gbr  PinRemapInterposer-F_SilkS.gbr  PinRemapInterposer.drl
XTA-35/: XTA-35.kicad_pcb  XTA-35.sch
XTA-35-TH/: XTA-35-TH-cache.lib  XTA-35-TH.kicad_pcb  XTA-35-TH.pro  XTA-35-TH.sch  fp-info-cache  fp-lib-table
XTA-35-TH/Gerbers/: XTA-35-TH-B_Cu.gbr  XTA-35-TH-B_Mask.gbr  XTA-35-TH-B_Paste.gbr  XTA-35-TH-B_SilkS.gbr  XTA-35-TH-Edge_Cuts.gbr  XTA-35-TH-F_Cu.gbr  XTA-35-TH-F_Mask.gbr  XTA-35-TH-F_Paste.gbr  XTA-35-TH-F_SilkS.gbr  XTA-35-TH-In1_Cu.gbr  XTA-35-TH-In2_Cu.gbr  XTA-35-TH-all-pos.csv  XTA-35-TH-bom.csv  XTA-35-TH.drl
XTA-8-bit-ide/: XTA-8-bit-ide-cache.lib  sym-lib-table
